fix: too high header provokes scrolling

--- a/components/article/style.less
+++ b/components/article/style.less
@@ -15,7 +15,7 @@
         flex: 0 1 @content-width;
         padding: 1rem;
         align-items: flex-start;
-        margin: -.5rem;
+        margin: -.5rem -.5rem 0;
     }
 
     &-main, &-aside {
